# datashare-preview

./: .dockerignore  .gitignore  Dockerfile  Makefile  Pipfile  README.rst  app.py  dev-requirements.txt  document.py  preview.py  production.ini  pyproject.toml  requirements.txt  setup.py  utils.py
.circleci/: config.yml
.github/workflows/: main.yml
cache/: .gitignore
conf/: development.ini  dockerenv.ini  production.ini
dspreview/: __init__.py  cache.py  config.py  content_types.py  document.py  main.py  preview.py  spreadsheet.py  utils.py  views.py
dspreview/tests/: test_views.py
tests/: test_abstract.py  test_cache.py  test_preflight.py  test_spreadsheet.py  test_thumbnail.py  test_views.py
tests/resources/: dummy.ods
