[tool.poetry]
name = "datashare-preview"
version = "1.4.5"
description = ""
authors = ["ICIJ <engineering@icij.org>"]
readme = "README.rst"
packages = [{include = "dspreview"}] 

[tool.poetry.dependencies]
aiofiles = "^22.1.0"
fastapi = "0.88.0"
fastapi-utils = "^0.2.1"
httpx = "0.23.3"
preview-generator = "^0.29"
pydantic = "^1.10.2"
pygelf = "^0.4.2"
python = ">=3.8.0,<3.11"
pytest = "^7.2.0"
uvicorn = "0.20.0"
anyio = "3.6.2"
httpcore = "0.16.3"
starlette = "0.22.0"
certifi = "2022.12.7"
exceptiongroup = "1.1.0"
filelock = "3.9.0"
greenlet = "2.0.1"
typing-extensions = "4.4.0"

[tool.poetry.group.dev.dependencies]
nose = "^1.3.7"
respx = "^0.20.1"
requests = "^2.28.1"

[tool.poetry.extras]
uvicorn=["standart"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
