[tool.poetry]
name = "datashare-preview"
version = "1.6.1"
description = ""
authors = ["ICIJ <engineering@icij.org>"]
readme = "README.rst"
packages = [{include = "dspreview"}] 

[tool.poetry.dependencies]
aiofiles = "^25.1.0"
fastapi = "^0.119.0"
fastapi-utils = {extras = ["all"], version =  "^0.8.0"}
httpx = "^0.28.1"
preview-generator = {extras = ["all"], version = "^0.29"}
pydantic = "^2.12.2"
pydantic-settings = "^2.11.0"
pygelf = "^0.4.3"
python = ">=3.10.0,<4.0"
pytest = "^7.4.4"
uvicorn = {extras = ["standard"], version = "^0.37.0"}
setuptools = "^80.9.0"

[tool.poetry.group.dev.dependencies]
nose = "^1.3.7"
respx = "^0.22.0"
requests = "^2.28.1"

[tool.poetry.extras]
uvicorn=["standart"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
